src/main/java/com/example/tastefulai/global/error/exception/TooManyRequestsException.java
package com.example.tastefulai.global.error.exception;

public class TooManyRequestsException extends RuntimeException {

    public TooManyRequestsException(String message) {
        super(message);
    }
}
